--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -18,8 +18,8 @@
         tools:layout="@layout/fragment_chat" />
 
     <fragment
-        android:id="@+id/navigation_notifications"
-        android:name="com.capstone481p.snoozeyoulose.ui.notifications.NotificationsFragment"
+        android:id="@+id/navigation_users"
+        android:name="com.capstone481p.snoozeyoulose.ui.users.UsersFragment"
         android:label="@string/title_notifications"
         tools:layout="@layout/fragment_notifications" />
 </navigation>
