slay the button is finally working but it's auto, not connected to firebase

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -76,5 +76,11 @@
         android:background="@android:drawable/editbox_background"
         app:drawableTopCompat="@drawable/baseline_access_time_24" />
 
+    <Button
+        android:id="@+id/awake_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="I'm Awake!" />
+
 
 </LinearLayout>
