--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -104,7 +104,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:background="@null"
-            android:src="@drawable/ic_send_black_24dp" />
+            android:src="@drawable/ic_send" />
 
     </LinearLayout>
 
