--- a/app/src/main/res/layout/row_users.xml
+++ b/app/src/main/res/layout/row_users.xml
@@ -29,6 +29,10 @@
             android:layout_weight="1"
             android:orientation="vertical">
 
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="13dp" />
+
             <TextView
                 android:id="@+id/namep"
                 android:layout_width="match_parent"
