--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -56,12 +56,12 @@
             </LinearLayout>
 
             <ImageView
-                android:id="@+id/block"
+                android:id="@+id/close_chat"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginEnd="5dp"
-                android:src="@drawable/ic_chat_black_24dp" />
+                android:src="@drawable/baseline_close_24" />
         </LinearLayout>
 
     </androidx.appcompat.widget.Toolbar>
