--- a/app/src/main/res/menu/menu_nav.xml
+++ b/app/src/main/res/menu/menu_nav.xml
@@ -5,6 +5,10 @@
         android:icon="@drawable/ic_home_black_24dp"
         android:title="Home" />
     <item
+        android:id="@+id/nav_profile"
+        android:icon="@drawable/ic_person_outline"
+        android:title="Profile" />
+    <item
         android:id="@+id/nav_users"
         android:icon="@drawable/baseline_star_24"
         android:title="Users" />
