--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -23,36 +23,36 @@
         android:text="current progress"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-<!--
+
     <Button
-        android:id="@+id/logSleepButton"
-        android:layout_width="228dp"
-        android:layout_height="67dp"
-        android:layout_marginStart="124dp"
-        android:layout_marginTop="268dp"
-        android:text="I'm Awake!"
+        android:id="@+id/awakeButton"
+        android:layout_width="142dp"
+        android:layout_height="76dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="264dp"
+        android:text="I'm Awake\n😎"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
--->
+
     <TextView
         android:id="@+id/currentSettings"
         android:layout_width="match_parent"
         android:layout_height="224dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="348dp"
+        android:layout_marginTop="384dp"
         android:text="current settings info"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-<!--
+
     <Button
-        android:id="@+id/changeSettings"
-        android:layout_width="230dp"
-        android:layout_height="64dp"
-        android:layout_marginStart="116dp"
-        android:layout_marginTop="592dp"
-        android:text="Change Settings"
+        android:id="@+id/sleepButton"
+        android:layout_width="150dp"
+        android:layout_height="77dp"
+        android:layout_marginStart="216dp"
+        android:layout_marginTop="264dp"
+        android:text="Going to Sleep\n💤"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
--->
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
