Send text accountability and aesthetic changes

--- a/app/src/main/res/layout/row_chat_left.xml
+++ b/app/src/main/res/layout/row_chat_left.xml
@@ -25,9 +25,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@drawable/image_placeholder"
+            android:background="@drawable/msg_back_left"
             android:padding="15dp"
-            android:text="His Message"
+            android:text="Message"
             android:textColor="@color/black"
             android:textSize="16sp"
             android:visibility="gone" />
