--- a/app/src/main/res/layout/row_chatlist.xml
+++ b/app/src/main/res/layout/row_chatlist.xml
@@ -5,6 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    app:cardCornerRadius="2dp"
+    app:cardElevation="2dp"
+    app:cardUseCompatPadding="true"
     app:contentPadding="3dp">
 
     <RelativeLayout
