--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -53,7 +53,7 @@
       android:textSize="32sp"
       android:textStyle="bold"
       app:drawableTopCompat="@drawable/baseline_access_alarm_24"
-      android:fontFamily="@font/comfortaa_regular" />/>
+      android:fontFamily="@font/comfortaa_regular" />
 
   <Space
       android:layout_width="match_parent"
@@ -68,7 +68,7 @@
       android:drawableStart="@drawable/baseline_access_alarm_24"
       android:drawablePadding="8dp"
       android:textColor="#FFFFFF"
-      android:fontFamily="@font/comfortaa_regular" />/>
+      android:fontFamily="@font/comfortaa_regular" />
 
   <TextView
       android:layout_width="match_parent"
@@ -79,7 +79,7 @@
       android:textColor="#FFFFFF"
       android:gravity="center"
       android:drawablePadding="16dp"
-      android:fontFamily="@font/comfortaa_regular" />/>
+      android:fontFamily="@font/comfortaa_regular" />
 
   <TextView
       android:id="@+id/tv_timer2"
@@ -93,7 +93,7 @@
       android:textSize="32sp"
       android:textStyle="bold"
       app:drawableTopCompat="@drawable/baseline_access_alarm_24"
-      android:fontFamily="@font/comfortaa_regular" />/>
+      android:fontFamily="@font/comfortaa_regular" />
 
   <Space
       android:layout_width="match_parent"
@@ -108,7 +108,7 @@
       android:drawableStart="@drawable/baseline_access_time_24"
       android:drawablePadding="8dp"
       android:textColor="#FFFFFF"
-      android:fontFamily="@font/comfortaa_regular" />/>
+      android:fontFamily="@font/comfortaa_regular" />
 
   <Space
       android:layout_width="match_parent"
