--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.profile.ProfileFragment">
+    tools:context=".ui.profile.ProfileFragment"
+    android:background="@drawable/sleep_background">
 
     <TextView
         android:id="@+id/welcomeUserText"
@@ -13,7 +14,13 @@
         android:layout_height="112dp"
         android:text="welcome back, user"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:textColor="#FFFFFF"
+        android:gravity="center"
+        android:drawablePadding="16dp"
+        android:fontFamily="@font/comfortaa_regular"/>
 
     <TextView
         android:id="@+id/progress"
@@ -22,7 +29,9 @@
         android:layout_marginTop="112dp"
         android:text="current progress"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:textColor="#FFFFFF"
+        android:fontFamily="@font/comfortaa_regular"/>
 
     <Button
         android:id="@+id/awakeButton"
@@ -32,7 +41,8 @@
         android:layout_marginTop="264dp"
         android:text="I'm Awake\n😎"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:fontFamily="@font/comfortaa_regular"/>
 
     <TextView
         android:id="@+id/currentSettings"
@@ -42,7 +52,9 @@
         android:layout_marginTop="384dp"
         android:text="current settings info"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:textColor="#FFFFFF"
+        android:fontFamily="@font/comfortaa_regular"/>
 
     <Button
         android:id="@+id/sleepButton"
@@ -52,7 +64,7 @@
         android:layout_marginTop="264dp"
         android:text="Going to Sleep\n💤"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:fontFamily="@font/comfortaa_regular"/>
 
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
