--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ui.chat.ChatFragment">
+    tools:context="ui.chat.ChatFragment"
+    android:background="@drawable/sleep_background">
 
     <LinearLayout
         android:layout_width="match_parent"
