--- a/app/src/main/res/layout/row_chatlist.xml
+++ b/app/src/main/res/layout/row_chatlist.xml
@@ -9,7 +9,8 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@drawable/night_spinner_background">
 
         <ImageView
             android:id="@+id/profileimage"
