--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -31,6 +31,7 @@
         android:layout_marginTop="112dp"
         android:fontFamily="@font/comfortaa_regular"
         android:text="current progress"
+        android:textSize="18sp"
         android:textColor="#FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -54,6 +55,7 @@
         android:layout_marginTop="432dp"
         android:fontFamily="@font/comfortaa_regular"
         android:text="current settings info"
+        android:textSize="18sp"
         android:textColor="#FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -65,7 +67,7 @@
         android:layout_marginStart="224dp"
         android:layout_marginTop="324dp"
         android:fontFamily="@font/comfortaa_regular"
-        android:text="Going to Sleep\n💤"
+        android:text="Night night\n😴"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -77,6 +79,7 @@
         android:layout_marginTop="148dp"
         android:fontFamily="@font/comfortaa_regular"
         android:text="total cycles"
+        android:textSize="16sp"
         android:textColor="#FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -89,18 +92,10 @@
         android:layout_marginTop="148dp"
         android:fontFamily="@font/comfortaa_regular"
         android:text="x num cycles"
+        android:textSize="16sp"
         android:textColor="#FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <View
-        android:id="@+id/divider1"
-        android:layout_width="409dp"
-        android:layout_height="1dp"
-        android:layout_marginStart="1dp"
-        android:background="?android:attr/listDivider"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/totalCyclesTxt" />
 
     <TextView
         android:id="@+id/awakeButtonTxt"
@@ -110,6 +105,7 @@
         android:layout_marginTop="188dp"
         android:fontFamily="@font/comfortaa_regular"
         android:text="Times woken up"
+        android:textSize="16sp"
         android:textColor="#FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -122,18 +118,10 @@
         android:layout_marginTop="188dp"
         android:fontFamily="@font/comfortaa_regular"
         android:text="x num awake"
+        android:textSize="16sp"
         android:textColor="#FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <View
-        android:id="@+id/divider2"
-        android:layout_width="409dp"
-        android:layout_height="1dp"
-        android:layout_marginStart="2dp"
-        android:background="?android:attr/listDivider"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/awakeButtonTxt" />
 
     <TextView
         android:id="@+id/sleepButtonTxt"
@@ -143,6 +131,7 @@
         android:layout_marginTop="232dp"
         android:fontFamily="@font/comfortaa_regular"
         android:text="Times slept"
+        android:textSize="16sp"
         android:textColor="#FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -155,6 +144,7 @@
         android:layout_marginTop="232dp"
         android:fontFamily="@font/comfortaa_regular"
         android:text="x num slept"
+        android:textSize="16sp"
         android:textColor="#FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -167,6 +157,7 @@
         android:layout_marginTop="464dp"
         android:fontFamily="@font/comfortaa_regular"
         android:text="wakeup time"
+        android:textSize="16sp"
         android:textColor="#FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -179,17 +170,10 @@
         android:layout_marginTop="464dp"
         android:fontFamily="@font/comfortaa_regular"
         android:text="00:00 mm"
+        android:textSize="16sp"
         android:textColor="#FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <View
-        android:id="@+id/divider3"
-        android:layout_width="409dp"
-        android:layout_height="1dp"
-        android:background="?android:attr/listDivider"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/wakeupTimeTxt" />
 
     <TextView
         android:id="@+id/bedTimeTxt"
@@ -199,6 +183,7 @@
         android:layout_marginTop="508dp"
         android:fontFamily="@font/comfortaa_regular"
         android:text="bed time"
+        android:textSize="16sp"
         android:textColor="#FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -211,17 +196,10 @@
         android:layout_marginTop="508dp"
         android:fontFamily="@font/comfortaa_regular"
         android:text="00:00 mm"
+        android:textSize="16sp"
         android:textColor="#FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <View
-        android:id="@+id/divider4"
-        android:layout_width="409dp"
-        android:layout_height="1dp"
-        android:background="?android:attr/listDivider"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bedTimeTxt" />
 
     <TextView
         android:id="@+id/accountabilityTxt"
@@ -231,6 +209,7 @@
         android:layout_marginTop="552dp"
         android:fontFamily="@font/comfortaa_regular"
         android:text="accountability type"
+        android:textSize="16sp"
         android:textColor="#FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -243,6 +222,7 @@
         android:layout_marginTop="552dp"
         android:fontFamily="@font/comfortaa_regular"
         android:text="idk just wake me up"
+        android:textSize="16sp"
         android:textColor="#FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
